# algorithms

./: .gitignore  README.md  algorithms.opam  dune-project
lib/: bfs.ml  dune  max_subarray.ml
test/: dune
