(lang dune 3.7)

(name algorithms)

(generate_opam_files true)

(source
 (github Zeta611/algorithms))

(authors "Jay Lee")

(maintainers "Jay Lee")

(license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name algorithms)
 (synopsis "Algorithm implementations")
 (description "Algorithm implementations")
 (depends ocaml dune)
 (tags (algorithms)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
